--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "type": "commonjs",
   "devDependencies": {
     "@types/node": "^16.11.10",
+    "@typescript-eslint/eslint-plugin": "^5.28.0",
+    "@typescript-eslint/parser": "^5.28.0",
     "eslint": "^8.18.0",
     "nodemon": "^2.0.16",
     "ts-node": "10.7.0",
