--- a/package.json
+++ b/package.json
@@ -38,12 +38,11 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "eslint": "^8.18.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-import-helpers": "^1.2.1",
+    "eslint-plugin-n": "^15.2.3",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^6.0.0",
     "ts-node": "10.7.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "4.5.2"
