--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "commonjs",
   "scripts": {
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
-    "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts",
-    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
+    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/shared/infra/http/server.ts",
+    "typeorm": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
     "@types/express": "^4.17.13",
@@ -41,7 +41,6 @@
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.3",
-    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "ts-node": "10.7.0",
     "ts-node-dev": "^2.0.0",
