--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "commonjs",
   "scripts": {
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
-    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/shared/infra/http/server.ts",
-    "typeorm": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify ./node_modules/typeorm/cli.js"
+    "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules --no-notify src/shared/infra/http/server.ts",
+    "typeorm": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules --no-notify ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
     "@types/express": "^4.17.13",
