--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,5 +15,13 @@
         "@typescript-eslint"
     ],
     "rules": {
-    }
+        "@typescript-eslint/no-use-before-define": [
+            "error",
+            {
+                "classes": true,
+                "functions": false,
+                "typedefs": false
+            }
+        ]
+      }
 }
