--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "typeorm": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules --no-notify ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
-    "@types/express": "^4.17.13",
     "bcrypt": "^5.0.1",
-    "class-transformer": "^0.5.1",
+    "class-transformer": "^0.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.7.0",
@@ -32,7 +32,9 @@
     "@babel/preset-typescript": "^7.17.12",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.11.10",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
