--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.11.10",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
     "babel-plugin-module-resolver": "^4.1.0",
@@ -48,6 +49,7 @@
     "eslint-plugin-n": "^15.2.3",
     "eslint-plugin-promise": "^6.0.0",
     "jest": "^28.1.3",
+    "swagger-ui-express": "^4.5.0",
     "ts-jest": "^28.0.6",
     "ts-node": "10.7.0",
     "ts-node-dev": "^2.0.0",
