feat: adiciona prettier como lint

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,7 @@ DATABASE_PORT="myport"
 DATABASE_USER_NAME="myname"
 DATABASE_PASSWORD="mypassword"
 DATABASE_NAME="mydatabase"
+
+# Others
+
+disk="local"
