--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
     "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules --no-notify src/shared/infra/http/server.ts",
     "typeorm": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules --no-notify ./node_modules/typeorm/cli.js",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint . --ext .ts --fix --ignore-pattern node_modules/",
+    "style": "prettier --write \"src/**/*.ts\""
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -44,11 +46,13 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "eslint": "^8.18.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.3",
     "eslint-plugin-promise": "^6.0.0",
     "jest": "^28.1.3",
+    "prettier": "^2.7.1",
     "swagger-ui-express": "^4.5.0",
     "ts-jest": "^28.0.6",
     "ts-node": "10.7.0",
