--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules --no-notify src/shared/infra/http/server.ts",
     "typeorm": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules --no-notify ./node_modules/typeorm/cli.js",
     "test": "jest",
-    "lint": "eslint . --ext .ts --fix --ignore-pattern node_modules/",
-    "style": "prettier --write \"src/**/*.ts\""
+    "lint": "eslint . --ext .ts --fix --ignore-pattern node_modules/"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -27,12 +26,12 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.17.10",
-    "@babel/core": "^7.18.5",
+    "@babel/core": "^7.18.9",
     "@babel/node": "^7.18.5",
     "@babel/plugin-proposal-class-properties": "^7.17.12",
     "@babel/plugin-proposal-decorators": "^7.18.2",
-    "@babel/preset-env": "^7.18.2",
-    "@babel/preset-typescript": "^7.17.12",
+    "@babel/preset-env": "^7.18.9",
+    "@babel/preset-typescript": "^7.18.6",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
@@ -41,22 +40,27 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^16.11.10",
     "@types/swagger-ui-express": "^4.1.3",
-    "@typescript-eslint/eslint-plugin": "^5.28.0",
-    "@typescript-eslint/parser": "^5.28.0",
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "@typescript-eslint/parser": "^5.31.0",
+    "babel-jest": "^28.1.3",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-import-resolver-typescript": "^3.3.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import-helpers": "^1.2.1",
     "eslint-plugin-n": "^15.2.3",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
+    "husky": "^8.0.0",
     "jest": "^28.1.3",
     "prettier": "^2.7.1",
     "swagger-ui-express": "^4.5.0",
     "ts-jest": "^28.0.6",
     "ts-node": "10.7.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "4.5.2"
+    "typescript": "^4.7.4"
   }
 }
